# HBAC

./: .env.example  .gitignore  README.md  Research Plan.md  pyproject.toml  references.bib
hbac/: __init__.py  dotenv_loader.py  freellmapi_config.py
paper/: Makefile  README.md  appendix_theory.tex  generate_figures.py  main.bbl  main.tex  neurips_2025.sty
research docs/: Experiments.md  Methodology.md  Paper Narrative.md  Paper v1.md  Paper v2.md  Path B Freeze.md  Preregistered Analysis.md  Related Work.md  Research Discovery.md  Research Plan.md  Results.md  Weaknesses.md
scripts/: reproduce_v3.sh  run_h6_local_ext_resume.sh  run_h6_local_extended.sh  run_impact_loop.sh  train_l1_parse_penalty.sh
slurm/: _gpu_setup.sh  _resolve_live_ckpt.sh  array_variants.sh  eval_capability_pilot.sh  eval_capability_pilot_2xa100.sh  eval_capability_pilot_2xa100_gpuonly.sh  eval_capability_pilot_2xa100_offload.sh  eval_capability_pilot_2xa100_vllm.sh  eval_capability_pilot_2xa100_vllm_swe_fix.sh  eval_capability_pilot_2xa100_vllm_swe_fuzzy.sh  eval_capability_pilot_2xa100_vllm_swe_prompt.sh  eval_capability_pilot_4bit.sh  eval_coder_next_live_slice.sh  eval_compose_live.sh  eval_compose_live_dpo.sh  eval_compose_live_dpo_v2.sh  eval_compose_live_grpo.sh  eval_compose_live_v2.sh  eval_live_all_baselines.sh  eval_live_budget_sweep.sh  eval_live_controller_runner.sh  eval_live_extreme_scarcity.sh  eval_live_fair_floor_sweep_array.sh  eval_live_floor_dose.sh  eval_live_floor_sweep.sh  eval_live_heuristics_n1000.sh  eval_live_heuristics_n1000_array.sh  eval_live_roi_skip.sh  eval_live_scarcity_boost.sh  eval_live_scarcity_boost_refined.sh  eval_live_scarcity_parse_penalty.sh  eval_live_tau_only.sh  eval_live_tau_v3b.sh  eval_live_v3_d18_array.sh  eval_live_v3_holdout_array.sh  eval_live_v3_pilot.sh  eval_real_oracle_matrix.sh  merge_live_n2000.sh  merge_live_v3_d18.sh  merge_live_v3_holdout.sh  (+16 more)
tests/: test_capability.py  test_clear.py  test_core.py  test_fairness.py  test_go_no_go.py  test_heuristics.py  test_official_baselines.py  test_phase1_acceptance.py  (+6 more)
(+189 files in other folders)
